[package]
name = "xrpl_wallet_manager"
version = "0.1.0"
edition = "2021"

# Pas de [[bin]] nécessaire : Cargo détecte automatiquement
# src/bin/cli.rs et src/bin/gui.rs comme deux binaires distincts.

[dependencies]
# Crypto / wallet
ed25519-dalek = "2"
sha2 = "0.10"
ripemd = "0.1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"

# Aléatoire
rand = "0.8"
rand_chacha = "0.3"

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GUI
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "macros", "process"] }

# Réseau XRPL (utilisé par le CLI uniquement)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Construction/signature/soumission de transaction -- API haut niveau async,
# support Ed25519 confirmé (autofill + sign_transaction + submit_and_wait).
# Version figée EXACTEMENT ("=") plutôt qu'un simple caret : c'est la seule
# dépendance qui manipule la clé privée pour signer -- on ne veut PAS qu'un
# `cargo update` tire silencieusement une nouvelle version (compromise ou
# simplement cassée) sans revue explicite. Toute mise à jour doit être un
# changement volontaire de cette ligne + relecture du diff amont, et
# `Cargo.lock` doit être committé pour figer aussi toutes les dépendances
# transitives (xrpl-mithril-{types,codec,models,wallet,client,tx}).
xrpl-mithril = "=0.5.3"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1